<resources>
    <string name="app_name">School System</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Students</string>
    <string name="menu_slideshow">Staff</string>
    <!-- strings.xml -->
    <string name="taptet_scho">TAPTET SCHOOL</string>
    <string name="logo">LOGO</string>
    <string name="motto">MOTTO</string>
    <string name="diligence_d">DILIGENCE DEFINES DESTINY</string>
    <string name="vision">VISION</string>
    <string name="to_develop_">To develop an own motivated holistic learner through consistent quality education in order to face the global challenges diligently</string>
    <string name="mission">VISION</string>
    <string name="to_create_a">To create an enticing and stimulating ethos (environment), through individual care and utility of all resources, in order to attain high levels of all round excellence</string>

    <string name="firstname_l">FirstName LastName</string>
    <string name="class_8">Class 8</string>
    <string name="present">Present</string>
    <string name="log_in">LOGIN</string>
    <string name="add_new">New</string>
    <string name="h_name">Enter Name</string>
    <string name="h_phone">Enter email</string>
    <string name="t_sex">sex</string>
    <string name="t_male">Male</string>
    <string name="t_female">Female</string>
    <string name="h_address">Admission Number</string>
    <string name="h_date1">Enter class</string>
    <string name="h_date2">Parent phone 1</string>
    <string name="h_phone2">Parent phone 2</string>
    <string name="h_parentName">Parent Name</string>
    <string name="h_location">Enter Location</string>
    <string name="t_type">Student Type</string>
    <string name="t_day">Day</string>
    <string name="t_border">Boarder</string>
    <string name="class8">class8</string>
    <string name="class7">class7</string>
    <string name="class6">class6</string>
    <string name="class5">class5</string>
    <string name="class4">class4</string>
    <string name="class3">class3</string>
    <string name="class2">class2</string>
    <string name="class1">class1</string>
    <string name="pre_primary2">Pre-Primary2</string>
    <string name="pre_primary1">Pre-Primary1</string>
    <string name="t_class">Class</string>
    <string name="submit">SUBMIT</string>
    <string name="menu_fees">Fees</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_calendar">Academic Calendar</string>
    <string name="schooltaptet_gmail_com">schooltaptet@gmail.com</string>
    <string name="taptet_school">Taptet School</string>
    <string name="amountOut">0.00</string>
    <string name="menu_exams">Exams</string>
    <string name="student_name">Student name</string>
    <string name="_0">0</string>
    <string name="eng">ENG</string>
    <string name="comp">COMP</string>
    <string name="tot">TOT</string>
    <string name="kis">KIS</string>
    <string name="jum">JUM</string>
    <string name="insh">INSH</string>
    <string name="mat">MAT</string>
    <string name="sci">SCI</string>
    <string name="sst">SST</string>
    <string name="cre">CRE</string>
    <string name="total">TOTAL</string>
    <string name="save">save</string>
    <string name="exam_name">Exam name</string>
    <string name="exam_year">Exam Year</string>
    <string name="edit">EDIT</string>
    <string name="ShowResults"><![CDATA[SAVE & SHOW RESULTS]]></string>

    <string-array name="class_array">
        <item>Select Class</item>
        <item>Grade 8</item>
        <item>Grade 7</item>
        <item>Grade 6</item>
        <item>Grade 5</item>
        <item>Grade 4</item>
        <item>Grade 3</item>
        <item>Grade 2</item>
        <item>Grade 1</item>
        <item>Pre-Primary 2</item>
        <item>Pre-Primary 1</item>
    </string-array>

</resources>