<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.moringaschool.schoolsystem.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.moringaschool.schoolsystem.ui.students.StudentsFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_students" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.moringaschool.schoolsystem.ui.staff.StaffFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_staff" />

    <fragment
        android:id="@+id/nav_fees"
        android:name="com.moringaschool.schoolsystem.ui.fees.FeesFragment"
        android:label="@string/menu_fees"
        tools:layout="@layout/fragment_fees" />

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.moringaschool.schoolsystem.ui.calendar.CalendarFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_calendar" />
</navigation>