<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:padding="10dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.StudentRegistrationActivity">

    <LinearLayout
        android:id="@+id/lay_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="@dimen/text_margin">

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:layout_weight="1"
                android:autofillHints=""
                android:backgroundTint="@color/mainColor"
                android:ems="10"
                android:hint="@string/h_name"
                android:inputType="textPersonName"
                android:tag="name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:autofillHints=""
                android:backgroundTint="@color/mainColor"
                android:ems="10"
                android:hint="@string/h_phone"
                android:inputType="textEmailAddress"
                android:tag="email"
                android:textAlignment="viewStart" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginBottom="@dimen/option_margin"
            android:layout_weight="1"
            android:ems="10"
            android:paddingLeft="4sp"
            android:paddingRight="4sp"
            android:text="@string/t_sex"
            android:textAppearance="@style/TextAppearance.Design.Counter"
            android:textColor="@color/mainColor" />

        <RadioGroup
            android:id="@+id/radio_sex"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:animateLayoutChanges="true"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/text_margin">

            <RadioButton
                android:id="@+id/radio_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/text_margin"
                android:layout_weight="1"
                android:backgroundTint="@color/mainColor"
                android:tag="sex_male"
                android:text="@string/t_male" />

            <RadioButton
                android:id="@+id/radio_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:tag="sex_female"
                android:text="@string/t_female" />

        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <EditText
                android:id="@+id/edit_admissionNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:layout_weight="1"
                android:autofillHints=""
                android:backgroundTint="@color/mainColor"
                android:ems="10"
                android:hint="@string/h_address"
                android:inputType="text"
                android:tag="admNo"
                android:textAlignment="viewStart" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <EditText
                android:id="@+id/edit_class"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:layout_weight="1"
                android:autofillHints=""
                android:backgroundTint="@color/mainColor"
                android:cursorVisible="false"
                android:ems="10"
                android:hint="@string/h_date1"
                android:inputType="text"
                android:tag="class" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <EditText
                android:id="@+id/edit_parentName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:layout_weight="1"
                android:autofillHints=""
                android:backgroundTint="@color/mainColor"
                android:ems="10"
                android:hint="@string/h_parentName"
                android:inputType="textPersonName"
                android:tag="parentName"
                android:textAlignment="viewStart" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <EditText
                android:id="@+id/edit_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:layout_weight="1"
                android:autofillHints=""
                android:backgroundTint="@color/mainColor"
                android:ems="10"
                android:hint="@string/h_location"
                android:inputType="text"
                android:tag="admNo"
                android:textAlignment="viewStart" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <EditText
                android:id="@+id/edit_phone1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:layout_weight="1"
                android:autofillHints=""
                android:backgroundTint="@color/mainColor"
                android:cursorVisible="false"
                android:ems="10"
                android:hint="@string/h_date2"
                android:inputType="phone"
                android:tag="phone1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <EditText
                android:id="@+id/edit_phone2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:layout_weight="1"
                android:autofillHints=""
                android:backgroundTint="@color/mainColor"
                android:cursorVisible="false"
                android:ems="10"
                android:hint="@string/h_phone2"
                android:inputType="phone"
                android:tag="phone2" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/typeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginBottom="@dimen/option_margin"
            android:layout_weight="1"
            android:ems="10"
            android:paddingLeft="4sp"
            android:paddingRight="4sp"
            android:text="@string/t_type"
            android:textAppearance="@style/TextAppearance.Design.Counter"
            android:textColor="@color/mainColor" />

        <RadioGroup
            android:id="@+id/radio_studentType"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/text_margin">

            <RadioButton
                android:id="@+id/radio_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/text_margin"
                android:layout_weight="1"
                android:tag="type_day"
                android:text="@string/t_day" />

            <RadioButton
                android:id="@+id/radio_border"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:tag="type_border"
                android:text="@string/t_border" />

        </RadioGroup>

        <TextView
            android:id="@+id/classText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:layout_marginBottom="@dimen/option_margin"
            android:layout_weight="1"
            android:ems="10"
            android:paddingLeft="4sp"
            android:paddingRight="4sp"
            android:text="@string/t_class"
            android:textAppearance="@style/TextAppearance.Design.Counter"
            android:textColor="@color/mainColor" />

        <RadioGroup
            android:id="@+id/radio_studentClass"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginRight="@dimen/text_margin"
            android:orientation="vertical"
            android:paddingBottom="@dimen/text_margin">

            <RadioButton
                android:id="@+id/radio_class8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/text_margin"
                android:layout_weight="1"
                android:tag="type_day"
                android:text="@string/class8" />

            <RadioButton
                android:id="@+id/radio_class7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:tag="type_border"
                android:text="@string/class7" />

            <RadioButton
                android:id="@+id/radio_class6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:tag="type_border"
                android:text="@string/class6" />

            <RadioButton
                android:id="@+id/radio_class5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:tag="type_border"
                android:text="@string/class5" />

            <RadioButton
                android:id="@+id/radio_class4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:tag="type_border"
                android:text="@string/class4" />

            <RadioButton
                android:id="@+id/radio_class3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:tag="type_border"
                android:text="@string/class3" />

            <RadioButton
                android:id="@+id/radio_class2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:tag="type_border"
                android:text="@string/class2" />

            <RadioButton
                android:id="@+id/radio_class1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:tag="type_border"
                android:text="@string/class1" />

            <RadioButton
                android:id="@+id/radio_classPre2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:tag="type_border"
                android:text="@string/pre_primary2" />

            <RadioButton
                android:id="@+id/radio_classPre1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:tag="type_border"
                android:text="@string/pre_primary1" />

        </RadioGroup>

        <Button
            android:id="@+id/submit_studentRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/submit_button"
            android:padding="10dp"
            android:text="@string/submit"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="21dp"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>